# opendevtui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  solo.yml
.depot/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
docs/: releasing.md
src/: api.rs  app.rs  cli.rs  config.rs  editor.rs  install.rs  lib.rs  main.rs  runtime.rs  ui.rs
