[package]
name = "opendevtui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.95"
crossterm = "=0.28.1"
nix = { version = "=0.29.0", features = ["process", "signal"] }
ratatui = "=0.28.1"
serde = { version = "=1.0.217", features = ["derive"] }
tempfile = "=3.15.0"
tokio = { version = "=1.43.0", features = ["full"] }
toml = "=0.8.8"
