[package]
name = "opendevtui"
version = "0.2.0"
edition = "2021"
authors = ["Peter Szoke"]
description = "A Unix terminal UI for managing project-local development services."
license = "MIT"
repository = "https://github.com/szokeptr/opendevtui"
readme = "README.md"
keywords = ["tui", "terminal", "development", "process", "services"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "=1.0.95"
axum = "=0.7.9"
crossterm = "=0.28.1"
hyper = { version = "=1.10.1", features = ["http1", "server"] }
hyper-util = { version = "=0.1.20", features = ["tokio"] }
nix = { version = "=0.29.0", features = ["process", "signal"] }
ratatui = "=0.28.1"
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.135"
tempfile = "=3.15.0"
tokio = { version = "=1.43.0", features = ["full"] }
toml = "=0.8.8"
